Fixed line-height for title on mobile.

--- a/source/stylesheets/base/_mobile.scss
+++ b/source/stylesheets/base/_mobile.scss
@@ -46,10 +46,18 @@
   h2 {
     margin-top: 20px;
     margin-bottom: 20px;
-    color: #34646D;	font-family: "Museo";	font-size: 25px;	line-height: 36px;	text-align: center;
+    color: #34646D;
+    font-family: "Museo";
+    font-size: 25px;
+    line-height: 32px;
+    text-align: center;
   }
 
   h3 {
-    color: #34646D;	font-family: Arial;	font-size: 18px;	line-height: 23px;	text-align: center;
+    color: #34646D;
+    font-family: Arial;
+    font-size: 18px;
+    line-height: 23px;
+    text-align: center;
   }
 }
